removed Select1 CSS Wrapper (select1wrapper) due to various layout issues (should fix select1 on windows)

--- a/resource/src/main/resources/less/betterform.less
+++ b/resource/src/main/resources/less/betterform.less
@@ -245,7 +245,6 @@ a:active {
 }
 
 .bf .bfInvalidControl .xfValue,
-.bf .bfInvalidControl .select1wrapper,
 .bf .bfInvalidControl .xfDateTextBox,
 .bf .bfInvalidControl .xfTimeTextBox {
 	border: 1px solid @invalid-color !important;
@@ -258,7 +257,6 @@ a:active {
 }
 
 /* Keep styling for Selects even if invalid */
-.bf .bfInvalidControl .select1wrapper .xfValue,
 .bf .bfInvalidControl .xfValue .xfSelectorItem .xfRadioValue  {
     border: 0 none !important;
 }
@@ -600,34 +598,7 @@ alert + hints should always be aligned with the control.
     position: relative;
     top: 5px;
 }
-/* apply custom style to Select1 appearance="minimal" */
-.bf .xfSelect1 .select1wrapper {
-    background-color: white;
-    background-image: url("@{image-url}/dropdownButton.png");
-    background-position: right center;
-    background-repeat: no-repeat;
-    border: 1px solid lightGray;
-    display: inline-block;
-    height: 16px;
-    overflow: hidden;
-    position: relative;
-    /*top: 5px;*/
-    width: 120px;
-}
 
-/* reset top:5px for horizontal layout */
-.bf .bfHorizontalTableValue .select1Min .select1wrapper,
-.bf .xfCompactRepeat .xfSelect1 .select1wrapper{
-    top:0;
-}
-.bf .xfSelect1 .select1wrapper select {
-    background: none repeat scroll 0 0 transparent;
-    border: 0 none;
-    font-size: 12px;
-    height: 15px;
-    padding: 0;
-    width: 140px;
-}
 
 .xfFullGroup .xfControl .xfValue {
     /*  conflicts with repeat
